Fixed chat friends overflow

--- a/client/src/components/Styles/ChatBody.scss
+++ b/client/src/components/Styles/ChatBody.scss
@@ -6,6 +6,7 @@
     left: 170px;
     border-radius: 1rem;
     box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
 
     .messages-subtitle{
         margin-top: 5rem;
@@ -192,10 +193,11 @@
             }
 
             .friend-page-main-class {
-
+                
                 .friend-page-and-unread-messages {
                     display: flex;
                     margin-top: .5rem;
+                    
                     .friends-page {
                         display: flex;
                         width: 100%;
